--- a/index.html
+++ b/index.html
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        background-color: #050505;
+      }
+      h1 {
+        color: #eeeeee;
+      }
+      div {
+        display: inline-block;
+        background-color: #d9d9d9;
+        width: fit-content;
+        height: fit-content;
+        border-radius: 50%;
+        margin: 5px;
+      }
+      .icon-button {
+        display: inline-block;
+        font-size: 34px;
+        padding: 25px 30px 25px 30px;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        color: rgb(127, 65, 251);
+        user-select: none;
+      }
+      .stop-btn {
+        display: inline-block;
+        font-size: 20px;
+        padding: 35px 30px 35px 30px;
+        cursor: pointer;
+        margin: 10px;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        color: rgb(127, 65, 251);
+        user-select: none;
+      }
+    </style>
   </head>
   <body>
-    <button onclick="window.location.href ='http://192.168.29.23' ">
-      click
-    </button>
+    <h1>ESP32 Car Control</h1>
+    <div>
+        <a id="tag" class="icon-button" href="/forward"
+          ><i class="fas fa-arrow-up"></i
+        ></a>
+    </div>
+      <p>
+        <div>
+            <a class="icon-button" href="/left"
+              ><i class="fas fa-arrow-left"></i
+            ></a>
+        </div>
+        <div>
+          <a class="stop-btn" href="/stop">Stop</a>
+        </div>
+        <div>
+
+          <a class="icon-button" href="/right"
+          ><i class="fas fa-arrow-right"></i
+        ></a>
+        </div>
+      </p>
+
+    <div>
+      <a class="icon-button" href="/backward"
+        ><i class="fas fa-arrow-down"></i
+      ></a>
+        </div>
   </body>
 </html>
